# MIOFlow

./: .gitignore  00_ode.ipynb  01_losses.ipynb  02_utils.ipynb  03_models.ipynb  04_plots.ipynb  05_train.ipynb  06_constants.ipynb  07_datasets.ipynb  08_exp.ipynb  09_geo.ipynb  10_eval.ipynb  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  environment.yml  index.ipynb  main.py  mkdocs.yml  nbdev.yml  pyproject.toml  requirements.txt  settings.ini  setup.py
.github/workflows/: deploy.yaml  main.yml  test_installation.yaml
MIOFlow/: __init__.py  _modidx.py  _nbdev.py  constants.py  datasets.py  eval.py  exp.py  gaga.py  geo.py  growth_rate.py  losses.py  mioflow.py  models.py  ode.py  phate_autoencoder.py  phate_decoder.py  plots.py  preprocessing.py  train.py  utils.py
MIOFlow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MIOFlow/core/: datasets.py  losses.py  models.py
_proc/: 00_ode.ipynb  01_losses.ipynb  02_utils.ipynb  03_models.ipynb  04_plots.ipynb  05_train.ipynb  06_constants.ipynb  07_datasets.ipynb  08_exp.ipynb  09_geo.ipynb  10_eval.ipynb  README.md  environment.yml  index.ipynb  settings.ini
data/: cell_info.csv  dyngen_expression_bif.csv  pseudotime-4x.npy  pseudotime-6x.npy
docs/: CONTRIBUTING.html  _config.yml  constants.html  datasets.html  eval.html  exp.html  geo.html  index.html  index.md  installation.md  losses.html  models.html  ode.html  plots.html  robots.txt  search.json  sidebar.json  sitemap.xml  train.html  tutorials.md  utils.html
mioflow/: __init__.py  mioflow.py
nbs/: 00_ode.ipynb  01_losses.ipynb  02_utils.ipynb  03_models.ipynb  04_plots.ipynb  05_train.ipynb  06_constants.ipynb  07_datasets.ipynb  08_exp.ipynb  09_geo.ipynb  10_eval.ipynb  index.ipynb  sidebar.yml
notebooks/: 0.02-preprocess-spatial-data.ipynb  00_preprocess_data.ipynb  01_Training_MIOFlow.ipynb  01_Training_MIOFlow_uv.ipynb  01_mioflow_vanilla.ipynb  02-Gene_Trends.ipynb  1.01-SERGIO-single-trajectory.ipynb  1.01.01-SERGIO-single-trajectory.ipynb  1.01.02-SERGIO-separated-branches.ipynb  1.02-SERGIO-separated-branches.ipynb  1.02.01-SERGIO-SDE.ipynb  1.02.02-SERGIO-SDE-multi.ipynb  1.03.01-SERGIO-growth_rate.ipynb  1.03.02-SERGIO-growth_rate-multi.ipynb  1NN_Metric.ipynb  2.01-EBD-vanilla.ipynb  EB-fig-5-table-1.ipynb  Embryoid_Body.ipynb  Interpolation_baseline.ipynb  SDE_New.ipynb  SDE_test.ipynb  [TEMP] Test Growth Branch detach M OT.ipynb  [TEMP] Test Growth Branch large energy penalty small OT.ipynb  [TEMP] Test Growth Partial Branch detach M OT.ipynb  [TEMP] Test Growth Partial Branch large energy penalty small OT.ipynb  [TEMP] Test Growth Partial Branch.ipynb  [TEMP] Test Growth Petal large energy penalty small OT.ipynb  [TEMP] Test Growth SDE Dying large energy penalty fast.ipynb  [TEMP] Test no Growth Branch.ipynb  [TEMP] Test no Growth Partial Branch.ipynb  [TEMP]Clean_Simple_Variables_Dyngen_good.ipynb  [TEMP]Clean_Variables_Dyngen_good.ipynb  [Tutorial] Dyngen.ipynb  [Tutorial] EB-Hold-out.ipynb  [Tutorial] Hold-out.ipynb  [Tutorial] Load Datasets.ipynb  [Tutorial] Petal.ipynb  [Tutorial] Run TrajectoryNet.ipynb  aml_pca.ipynb  eb.ipynb  (+3 more)
notebooks_dev/: branches_cond.ipynb  branches_vanila.ipynb  cflows noise copy 2.ipynb  cflows noise copy.ipynb  cflows sde.ipynb  cflows_growth.ipynb  cflows_growth2.ipynb  cflows_growth3.ipynb  cflows_growth4.ipynb  cflows_pseudotime_balanced_subsampled_grown.ipynb  cflows_pseudotime_balanced_subsampled_noisy.ipynb
scripts/: run.py
src/: gaga.py  mioflow.py
testing_revamp/: [TEST ALL FEATURES]-branches.ipynb  test_growth_rate_train.ipynb
tests/: Test_GrowthRateModel.ipynb  Test_GrowthRateModel_zero.ipynb  Test_GrowthRateSDEModel.ipynb  Test_ToyModel.ipynb  Test_dsOT_loss.ipynb  Test_dsOT_loss_zero_mass.ipynb  condmodel.ipynb  torchdyn.ipynb  toymodel.ipynb
tutorials/: 01_mioflow_vanilla.ipynb  02_EBD_preprocessing_and_vanilla_colab.ipynb  02_mioflow_vanilla_colab.ipynb  decoder.ckpt  phate_scaler.pkl
(+36 files in other folders)
