[project]
name = "MIOFlow"
version = "0.1.9"
description = "MIOFlow is a Python package for modeling and analyzing single-cell RNA-seq data using optimal flows."
readme = "README.md"
requires-python = ">=3.8"
# license = "LicenseRef-Yale-License"
license-files =["LICENSE.md"]
keywords = ["neural ode", "trajectory", "emd", "Optimal Transport", "single cell RNA", "mioflow"]
authors = [
  {name = "xingzhis", email = "xingzhi.sun@yale.edu"},
  {name = "bjoaofelipe", email = "joaofelipe.rocha@yale.edu"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    # "License :: Yale License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy<=1.26.4",
    "pandas",
    "torch>=1.11.0",
    "pytorch-lightning",
    "hydra-core",
    "omegaconf",
    "torchsde",
    "torchdiffeq",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "seaborn",
    "phate",
    "graphtools",
    "pot", # Python Optimal Transport
    "tqdm",
    "pyyaml",
    "scanpy>=1.9.8",
    "ipywidgets>=8.1.7",
    "ipykernel>=6.29.5",
    "notebook>=7.3.3",
]

[tool.setuptools]
packages = ["MIOFlow"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]


# [tool.uv]
# package = true

# [tool.uv.workspace]
# members = [
#     "MIOFlow",
# ]