[project]
name = "mioflow"
version = "0.1.14"
description = "MIOFlow is a Python package for modeling and analyzing single-cell RNA-seq data using optimal flows."
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE.md"]
keywords = ["neural ode", "trajectory", "emd", "Optimal Transport", "single cell RNA", "mioflow"]
authors = [
  {name = "xingzhis", email = "xingzhi.sun@yale.edu"},
  {name = "bjoaofelipe", email = "joaofelipe.rocha@yale.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "pandas",
    "numpy>=1.24.4",
    "torch>=1.11.0",
    "torchdiffeq",
    "torchsde",
    "scikit-learn",
    "matplotlib",
    "phate",
    "pot",
    "tqdm",
    "scanpy>=1.9.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mioflow*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "notebook>=7.3.3",
    "seaborn",
]